--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,61 @@
-<p>home works!</p>
+<!-- home.component.html -->
+<div class="home-container">
+    <div class="left-side">
+      <h1>
+        Welcome to <span class="highlight">CVSMART</span>
+      </h1>
+        <p> A leading platform that bridges the gap between talented candidates and employers. 
+            We specialize in connecting job seekers with opportunities that match their skills and aspirations, while also helping 
+            companies find the right candidates to meet their hiring needs. Whether you're looking to launch your career or seeking 
+            the perfect talent to join your team, <span class="highlight">CVSMART</span> is dedicated to providing a seamless and efficient recruitment experience 
+            for both job seekers and employers. Our goal is to empower individuals and businesses
+             by making the hiring process more accessible, efficient, and tailored to everyone's needs.
+             <br><br><button type="button" class="btn btn-outline-primary" (click)="navigateToRegistration()">Sign in</button>
+        </p>     
+    </div>
+    <div class="right-side">
+        <img src="assets/headerimg6.png" class="rounded" alt="Header Image" />
+    </div>
+</div>
+
+<div class="solutions-block">
+    <h2>About Us</h2>
+    <div class="solution-cards">
+      <div class="solution-card">
+        <h3>Tailored Matches</h3>
+        <p>We leverage advanced algorithms and personalized assessments to ensure that candidates are matched
+             with jobs that truly fit their skills and career goals.</p>
+      </div>
+      <div class="solution-card">
+        <h3>Comprehensive Support</h3>
+        <p>From resume building to interview preparation, we offer resources and guidance to 
+            help job seekers shine in their applications and interviews.</p>
+      </div>
+      <div class="solution-card">
+        <h3>Employer Solutions</h3>
+        <p>We provide employers with innovative tools and insights to streamline the hiring process, 
+            ensuring they find the right talent quickly and effectively.</p>
+      </div>
+    </div>
+</div>
+
+<div class="contact-section">
+    <h2>Contact Us</h2>
+    <div class="contact-icons">
+      <a href="mailto:your_email@example.com">
+        <img src="assets/email.png" alt="Email">
+      </a>
+      <a href="https://www.instagram.com/your_instagram_handle">
+        <img src="assets/insta.png" alt="Instagram">
+      </a>
+      <a href="tel:+911234567890">
+        <img src="assets/whatsapp.png" alt="WhatsApp">
+      </a>
+    </div>
+  </div>
+
+
+
+
+
+
