--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container-body">
   <app-header></app-header>
+  <!-- <app-home></app-home> -->
   <router-outlet></router-outlet>
 </div>
