--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,22 @@
 <nav class="nav">
-    <div>
-      <h1><a routerLink='/home'>CvSmart</a></h1>
-      <h4><a routerLink='/home'>Where Jobs Meet Talent</a></h4>
-    </div>
-    <ul>
-      <li><a routerLink='/dashboard'>Dashboard</a></li>
-      <!-- <li *ngIf="role=='recruter'"><a routerLink='/findcand'>Find Candidates</a></li> -->
-      <li><a routerLink='/findcand'>Find Candidates</a></li>
-      <li><a routerLink='/findjob'>Find Jobs</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul>
-  </nav>
+  <div>
+   <a routerLink='' ><img src="assets\logo.png"/></a>
+  </div>
+  
+  <div class="hamburger" onclick="toggleMenu()">
+     <div></div>
+     <div></div>
+     <div></div>
+  </div>
+  
+  <ul [ngClass]="{ 'active': isMenuOpen }">
+     <li><a routerLink='/dashboard'>Dashboard</a></li>
+     <li><a routerLink='/findcand'>Find Candidates</a></li>
+     <li><a routerLink='/findjob'>Find Jobs</a></li>
+     <li><a href="#">Contact Us</a></li>
+     <!-- <li><a routerLink='/register'>Register</a></li> -->
+  </ul>
+</nav>
+
+
+
