--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<div class="contact-section">
+<div class="contact-section" id="contact-us">
     <h2>Contact Us</h2>
     <div class="contact-icons">
       <a href="mailto:your_email@example.com">
