--- a/src/app/findjob/findjob.component.html
+++ b/src/app/findjob/findjob.component.html
@@ -1,1 +1,58 @@
-<p>findjob works!</p>
+<div class="wrapper">
+  <div class="search-container">
+    <div class="resume-card">
+      <h2>Add your Resume</h2>
+      <div class="button-container">
+        <input 
+          type="file" 
+          id="fileInput" 
+          accept=".pdf,.doc,.docx" 
+          (change)="onFileSelected($event)" 
+          #fileInput
+          style="display: none;"
+        />
+        <label *ngIf="!fileChosen" for="fileInput" class="custom-file-upload">
+          Choose File
+        </label>
+        <span class="file-name" *ngIf="fileChosen">{{ selectedFileName }}</span>
+        <button class="remove-file-button" *ngIf="fileChosen" (click)="removeFile()">
+          &times;
+        </button>
+      </div>
+
+    <div class="location-card">
+      <h2>Enter Location</h2>
+      <input 
+        type="text" 
+        placeholder="Location" 
+        [(ngModel)]="location"
+        (input)="onInputChange($event)" 
+        (blur)="hideSuggestions()" 
+        (keydown)="onKeyDown($event)"
+      />
+      <ul class="suggestions-list" *ngIf="showSuggestions">
+        <li 
+          *ngFor="let city of filteredCities; let i = index" 
+          [class.active]="i === activeSuggestionIndex"
+          (click)="selectCity(city)"
+        >
+          <span [innerHTML]="highlightMatch(city.name)"></span> ({{ city.state }})
+        </li>
+      </ul>
+    </div>
+
+    <!-- New submit button added here -->
+<button 
+    class="submit-button" 
+    (click)="onSubmit()" 
+    [disabled]="!isFormValid()"> Submit</button>
+
+  <button 
+    class="find-job-button" 
+    (click)="findJob()" 
+    [disabled]="!isFormValid() || !uploadSuccessful">Find Job</button>
+
+    <!-- Job listing component -->
+    <app-job-listing *ngIf="showJobList" [jobs]="jobs"></app-job-listing>
+  </div>
+</div>
