--- a/src/app/findjob/findjob.component.html
+++ b/src/app/findjob/findjob.component.html
@@ -2,6 +2,7 @@
   <div class="search-container">
     <div class="resume-card">
       <h2>Add your Resume</h2>
+      <h2>Please add docx file since we had no money for pdf upload :(</h2>
       <div class="button-container">
         <input 
           type="file" 
